fixed text wrap overflow on results

--- a/extension/css/custom.css
+++ b/extension/css/custom.css
@@ -42,6 +42,7 @@ body {
   padding-left: 10px;
   margin-bottom: 5px;
   border-radius: 5px;
+  overflow-wrap: break-word;
 }
 
 .result-text{
